Overwrite repo with latest PodLab 2.01 project

--- a/episodeTemplate.html
+++ b/episodeTemplate.html
@@ -49,7 +49,7 @@
     <p><strong>Subject:</strong> Invitation to join [SHOW NAME]</p>
     <p>Dear [GUEST NAME],</p>
     <p>I’d love to invite you as a guest on <strong>[SHOW NAME]</strong>, hosted by [HOST NAME]. In this episode we’ll be covering <em>[TOPICS]</em>.</p>
-    <p>Your insights would add tremendous value to our listeners. Please let me know if you’re available to record.</p>
+    <p>Your insights would add tremendous value to our listeners. Please let me know if you’re available to record [RECORDING DATE] [RECORDING TIME] .</p>
     <p>Best regards,<br>[HOST NAME]</p>
   </div>
 
@@ -78,7 +78,7 @@
   </div>
 
   <footer>
-    PodLab Episode Packet v1.9 — Modular, branded, and ready for recording.
+  PodLab Episode Packet v2.0 — Modular, branded, and ready for recording.
   </footer>
 
 </body>
